# babel

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt
.github/workflows/: linux.yaml  windows.yaml
client/: CMakeLists.txt
client/include/: Client.hpp
client/include/AudioStream/: AAudioStream.hpp  AudioPortStream.hpp  AudioStreamFactory.hpp  IAudioStream.hpp  MiniAudioStream.hpp  PortAudioStream.hpp
client/include/Codec/: ACodec.hpp  CodecFactory.hpp  ICodec.hpp  OpusCodec.hpp
client/include/TCP/: ATCP.hpp  ITCP.hpp  TCPAsio.hpp  TCPFactory.hpp
client/include/UDP/: AUDP.hpp  AsioUDP.hpp  IUDP.hpp  UDPFactory.hpp
client/src/: Client.cpp  ClientCommands.cpp  main.cpp
client/src/AudioStream/: AudioPortStream.cpp  MiniAudioStream.cpp  PortAudioStream.cpp
client/src/Codec/: OpusCodec.cpp
client/src/TCP/: TCPAsio.cpp
client/src/UDP/: AsioUDP.cpp
communication/: TCPProtocol.hpp  UDPProtocol.hpp
documentation/: CONTRIBUTING.md  tcp_protocol.md  udp_protocol.md
protocol/: .env  CMakeLists.txt  tcp_protocol.hpp
protocol/encryption/: AEncryption.hpp  IEncryption.hpp  aes-gcm.hpp
server/: CMakeLists.txt
server/include/: Server.hpp  UserSession.hpp
server/include/TCP/: ATCP.hpp  ITCP.hpp  TCPAsio.hpp  TCPFactory.hpp
server/src/: Server.cpp  main.cpp
server/src/TCP/: TCPAsio.cpp
